--- a/website.html
+++ b/website.html
@@ -20,7 +20,7 @@
     
  
     <center>
-<h1 id="no-cry"> Welcome to Mr.Wills website... </h1>   
+<h1 id="idc"> Welcome to Mr.Wills website... </h1>   
 
     <p id="p1"; class="odd"> I made this webiste becuase Mr.will asked me too </p>
 
