--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ hight="400px"
 <center>
     <img id="lock" src="cashsapp.png">
 
-<a href="https://www.gofundme.com/manage/12-domain-needed-for-project-grade?fss=1">
+<a href="https://gofund.me/5d378d0e">
 <img id="in" src="frame.png">
 
 </a>
